# todo_app

./: .gitignore  LICENSE  pyproject.toml
apps/todo/: admin.py  models.py  serializers.py  urls.py  views.py
apps/todo/migrations/: 0001_initial.py  0002_rename_is_complated_todo_is_completed.py  0003_todo_user.py  0004_category_todo_category.py  0005_todo_deadline_todo_priority.py  0006_todo_archived_at_todo_is_archived.py
apps/users/: serializers.py  urls.py  views.py
apps/users/migrations/: 0001_initial.py
config/: drf_spectacular.py  jazzmin.py  rest_framework.py  settings.py  spectacular_view.py  urls.py
frontend/: package-lock.json
frontend/src/: App.jsx  index.css
frontend/src/pages/: Dashboard.jsx  Login.jsx  Profile.jsx  Register.jsx
frontend/src/services/: api.js
templates/: swagger_ui.html
